put search into a sidebar kind of div

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
 
 <h1>Index</h1>
 
-<a href="search"> To the Assisted Search </a>
+
+<div align="left">
+  <object type="text/html" data="search" width="250px" height="500px" style="overflow:auto;border:5px ridge blue"></object>
+</div>
 
 {% endblock %}
