--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,20 @@
-<DOCTYPE html>
-    <html>
-        <head>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+{% extends 'base.html' %}
 
-        </head>
-        <body>
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="pull-left" href="#">
-                            <img src="../static/title.png"
-                            height="50px">
-                        </a>
-                    </div>
-                </div>
-            </nav>
-        </body>
-    </html>
-</DOCTYPE>
+
+{% block title %}Hedgehog{% endblock %}
+
+
+{% block content %}
+
+<nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container-fluid">
+        <div class="navbar-brand">
+            <a class="pull-left" href="#">
+                <img src="../static/title.png"
+                height="30px">
+            </a>
+        </div>
+    </div>
+</nav>
+
+{% endblock %}
