--- a/static/style.css
+++ b/static/style.css
@@ -20,3 +20,12 @@ body{
 .blue_bground {
       background-color: #24495E;
 }
+
+.home {
+      background: url("../static/bg.png") no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      height: 100vh;
+}
