--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
    (the sans-serif is a backup font, just in case)
 */
 
-body{
+* {
       font-family: 'Josefin Sans', sans-serif;
       font-size: 15px;
 }
@@ -28,4 +28,29 @@ body{
       -o-background-size: cover;
       background-size: cover;
       height: 100vh;
+}
+
+.login {
+      background-color: #34495E;
+      color: #E4F1FE;
+      width: 500px;
+      height: 300px;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: -160px -260px;
+      border-radius: 25px;
+      -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
+.username {
+      background-image: url("../static/username.png");
+      background-repeat: no-repeat;
+      padding: 5px;
+      padding-left: 25px;
+      width: 260px;
+      color: black;
 }
