--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,6 +22,12 @@
     <img src="../static/hedgehog.png"
         class="intro"
         id="intro">
+    <div class="login">
+        <h1>Login</h1>
+        <form>
+            <input type="text" class="username" name="username" placeholder="Username (i.e. JohnDoe123)">
+        </form>
+    </div>
 </div>
 
 {% endblock %}
