--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
                 </a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#" id="signup" onclick="signup()">Sign Up</a></li>
+                <li><a href="#" id="signup" onclick="signup()">Sign Up</a></li>
                 <li><a href="#" id="signin" onclick="signin()">Sign In</a></li>
                 <li><a href="#" id="about" onclick="about()">About</a></li>
             </ul>
@@ -23,10 +23,17 @@
         class="intro"
         id="intro">
     <div class="login">
-        <h1>Login</h1>
-        <form>
-            <input type="text" class="username" name="username" placeholder="Username (i.e. JohnDoe123)">
-        </form>
+        <center>
+            <h1>Login</h1>
+            <br>
+            <form>
+                <input type="text" class="username" name="username" placeholder="Username (i.e. JohnDoe123)">
+                <br><br>
+                <input type="password" class="password" name="password" placeholder="Password (i.e. *********)">
+                <br><br>
+                <input type="submit" value="Login">
+            </form>
+        </center>
     </div>
 </div>
 
