--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@
 }
 
 .home {
-      background: url("../static/bg.png") no-repeat center center fixed; 
+      background: url("../static/bg.png") repeat-y center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -44,6 +44,22 @@ h1 {
       top: 50%;
       right: 50%;
       margin: -160px -260px;
+      border-radius: 25px;
+      -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
+.signup {
+      background-color: #34495E;
+      color: #E4F1FE;
+      width: 500px;
+      height: 350px;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: -185px -260px;
       border-radius: 25px;
       -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
