one more edit on homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,11 +40,11 @@
             <h1>Become a Quill Today!</h1>
             <br>
             <form>
-                <input type="text" class="usersign" name="usersign" placeholder="Username (i.e. JohnDoe123)">
+                <input type="text" class="username" name="usersign" placeholder="Username (i.e. JohnDoe123)">
                 <br><br>
-                <input type="password" class="passsign" name="passsign" placeholder="Password (i.e. **********)">
+                <input type="password" class="password" name="passsign" placeholder="Password (i.e. **********)">
                 <br><br>
-                <input type="password" class="passrepeat" name="passrepeat" placeholder="Repeat Password">
+                <input type="password" class="password" name="passrepeat" placeholder="Repeat Password">
                 <br><br>
                 <input type="submit" value="Sign Up">
             </form>
