--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      padding-top: 10em;
+      padding-top: 10vh;
 }
 
 .blue_bground {
