added ability to test home.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,11 @@
                 <li><a href="#" id="signup" onclick="signup()">Sign Up</a></li>
                 <li><a href="#" id="signin" onclick="signin()">Sign In</a></li>
                 <li><a href="#" id="about" onclick="about()">About</a></li>
+                <li>
+                    <p class="navbar-btn">
+                        <a href="/home" class="btn btn-default">Testing home</a>
+                    </p>
+                </li>
             </ul>
         </div>
     </nav>
