--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-brand">
-            <a class="pull-left" href="#">
+            <a class="pull-left" href="/">
                 <img src="../static/title.png"
                 height="30px">
             </a>
