I like JavaScript when you can make it look elegant. This does not look elegant. BUT, it kinda does what I want it to do, so we're gonna leave it for now.

--- a/templates/datas.html
+++ b/templates/datas.html
@@ -6,7 +6,12 @@
 
 {% block content %}
 <h1>DATAS!</h1>
-Search Tags: <input id="tag-search" type="text" name="tag" placeholder="v ug7eri" />
+<h2>Tag Search</h2>
+Search Tags: <input id="tags-search" type="text" name="tags" placeholder="v ug7eri" />
+<div id="tags-search-results"></div>
+<h2>Info Search</h2>
+Search Info: <input id="info-search" type="text" name="info" placeholder="Put da thing here pls." />
+<div id="info-search-results"></div>
 {% endblock %}
 
 {% block scripts %}
