Premature commit, but my eyes are starting to droop. Lots of work in the direction of optimizing the model, user authentication the ultimate objective at the moment.

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="navbar-brand">
             <a class="pull-left" href="/">
-                <img src="../static/title.png"
+                <img src="{{ url_for('static', filename='img/logo.png') }}"
                 height="30px">
             </a>
         </div>
