--- a/static/style/style.css
+++ b/static/style/style.css
@@ -22,7 +22,7 @@
 }
 
 .home {
-      background: url("../static/bg.png") repeat-y center center fixed; 
+      background: url("../img/bg.png") repeat-y center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -80,11 +80,11 @@ input[type=password]{
 }
 
 .username {
-      background: url("../static/username.png") left center no-repeat;
+      background: url("../img/icon/username.png") left center no-repeat;
 }
 
 .password {
-      background: url("../static/password.png") left center no-repeat;
+      background: url("../img/icon/password.png") left center no-repeat;
 }
 
 input[type=submit]{
