--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -12,6 +12,6 @@
     src="https://code.jquery.com/jquery-latest.min.js"
     charset="utf-8"></script>
   <script type="text/javascript"
-    src="{{ url_for('static', filename='database.js') }}"></script>
+    src="{{ url_for('static', filename='js/database.js') }}"></script>
 </body>
 </html>
