--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Database Administration</h1>
+  <p>Welcome, {{ user }}.</p>
   <h2>Tags</h2>
   <table id="tags"></table>
   
