--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -32,7 +32,7 @@
     <center>
       <h1>Login</h1>
       <br>
-      <form id="login">
+      <form id="login" action="{{ url_for('api', action='login') }}" method="POST">
         <input type="text" class="username" name="username" placeholder="Username (i.e. JohnDoe123)">
         <br><br>
         <input type="password" class="password" name="password" placeholder="Password (i.e. *********)">
@@ -45,7 +45,7 @@
     <center>
       <h1>Become a Quill Today!</h1>
       <br>
-      <form id="register">
+      <form id="register" method="POST">
         <input type="text" class="username" name="usersign" placeholder="Username (i.e. JohnDoe123)">
         <br><br>
         <input type="password" class="password" name="passsign" placeholder="Password (i.e. **********)">
