--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -2,12 +2,24 @@
 <html>
 <head>
   <title>Database Administration</title>
+  <style>
+    table, th, td {
+      border: 1px solid black;
+      padding: 5px;
+    }
+  </style>
 </head>
 <body>
   <h1>Database Administration</h1>
   <p>Welcome, {{ user }}.</p>
   <h2>Tags</h2>
-  <table id="tags"></table>
+  <table id="tags">
+    <tr><th></th><th>Name</th><th>ObjectId</th></tr>
+  </table>
+  <h2>Info</h2>
+  <table id="info">
+    <tr><th></th><th>Title</th><th>Author</th><th>ObjectId</th></tr>
+  </table>
   
   <script type="text/javascript"
     src="https://code.jquery.com/jquery-latest.min.js"
