--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,6 +15,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="javascript:;" id="signup">Sign Up</a></li>
         <li><a href="javascript:;" id="signin">Sign In</a></li>
+        <li><a href="javascript:;" id="signout">Sign Out</a></li>
         <li><a href="javascript:;" id="about">About</a></li>
         <li>
           <p class="navbar-btn">
