almost done with homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -56,6 +56,12 @@
       </form>
     </center>
   </div>
+  <div class="about" style="display:none;">
+    
+  </div>
+  <div class="team" style="display:none;">
+    
+  </div>
 </div>
 {% endblock %}
 
