--- a/static/style/style.css
+++ b/static/style/style.css
@@ -38,12 +38,12 @@ h1 {
       background-color: #34495E;
       color: #E4F1FE;
       width: 500px;
-      height: 300px;
+      height: 350px;
       padding: 20px;
       position: absolute;
       top: 50%;
       right: 50%;
-      margin: -160px -260px;
+      margin: -185px -260px;
       border-radius: 25px;
       -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
@@ -94,4 +94,36 @@ input[type=submit]{
       border-radius: 5px;
       padding: 5px 15px;
       font-size: 14px;
+}
+
+.team {
+      background-color: #34495E;
+      color: #E4F1FE;
+      width: 500px;
+      height: 350px;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: -185px -260px;
+      border-radius: 25px;
+      -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
+.about {
+      background-color: #34495E;
+      color: #E4F1FE;
+      width: 500px;
+      height: 350px;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: -185px -260px;
+      border-radius: 25px;
+      -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
 }
