--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,6 +17,7 @@
         <li><a href="javascript:;" id="signin">Sign In</a></li>
         <li><a href="javascript:;" id="signout">Sign Out</a></li>
         <li><a href="javascript:;" id="about">About</a></li>
+        <li><a href="javascript:;" id="team">Team</a></li>
         <li>
           <p class="navbar-btn">
             <a href="{{ url_for('home') }}" class="btn btn-default">Testing home</a>
