something that was bothering me

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,7 +37,7 @@
       <form id="login" action="{{ url_for('api', action='login') }}" method="POST">
         <input type="text" class="username" name="username" placeholder="Username (i.e. JohnDoe123)">
         <br><br>
-        <input type="password" class="password" name="password" placeholder="Password (i.e. *********)">
+        <input type="password" class="password" name="password" placeholder="Password (i.e. **********)">
         <br><br>
         <input type="submit" value="Login">
       </form>
