Hope this doesn't break anything! :D

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-brand">
-            <a class="pull-left" href="/">
+            <a class="pull-left" href="{{ url_for('index') }}">
                 <img src="{{ url_for('static', filename='img/logo.png') }}"
                 height="30px">
             </a>
