--- a/static/style/style.css
+++ b/static/style/style.css
@@ -12,9 +12,10 @@
 
 .intro {
       display: block;
+      padding-top: 20vh;
       margin-left: auto;
       margin-right: auto;
-      padding-top: 10vh;
+
 }
 
 .blue_bground {
@@ -51,6 +52,22 @@ h1 {
 }
 
 .signup {
+      background-color: #34495E;
+      color: #E4F1FE;
+      width: 500px;
+      height: 350px;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: -185px -260px;
+      border-radius: 25px;
+      -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
+.team {
       background-color: #34495E;
       color: #E4F1FE;
       width: 500px;
