--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,22 @@
 
 
 {% block content %}
-
-<nav class="navbar navbar-inverse navbar-static-top">
+  <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
-        <div class="navbar-brand">
-            <a class="pull-left" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='img/logo.png') }}"
-                height="30px">
-            </a>
-        </div>
+      <div class="navbar-header">
+        <a id="logo" href="javascript:;" class="pull-left navbar-brand">
+          <img src="{{ url_for('static', filename='img/logo.png') }}"
+          height="30px">
+        </a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="javascript:;" id="signout">Sign Out</a></li>
+      </ul>
     </div>
-</nav>
+  </nav>
+{% endblock %}
 
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/user.js') }}"></script>
 {% endblock %}
