--- a/static/style/style.css
+++ b/static/style/style.css
@@ -144,3 +144,7 @@ input[type=submit]{
       -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
 }
+
+.navbar {
+      margin-bottom: 0;
+}
