--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,22 @@
         </a>
       </div>
       <ul class="nav navbar-nav navbar-right">
+           <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Go!</button>
+              </span>
+          </div>
         <li><a href="javascript:;" id="signout">Sign Out</a></li>
       </ul>
     </div>
   </nav>
+  
+  <ul class="nav nav-pills nav-stacked">
+    <li role="presentation" class="active"><a href="#">Home</a></li>
+    <li role="presentation"><a href="#">Latest activity</a></li>
+    <li role="presentation"><a href="#">Your Study Guides</a></li>
+  </ul>
 {% endblock %}
 
 
