--- a/static/style/style.css
+++ b/static/style/style.css
@@ -15,7 +15,6 @@
       padding-top: 20vh;
       margin-left: auto;
       margin-right: auto;
-
 }
 
 .blue_bground {
@@ -143,4 +142,7 @@ input[type=submit]{
       -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+#form-control {
+      width: 200px;
 }
