--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,18 @@
 
 {% block title %} Hedgehog {% endblock %}
 
+{% block navbar %}
+<li><a href="javascript:;" id="signup">Sign Up</a></li>
+<li><a href="javascript:;" id="signin">Sign In</a></li>
+<li><a href="javascript:;" id="about">About</a></li>
+<li><a href="javascript:;" id="team">Team</a></li>
+<li>
+  <p class="navbar-btn">
+    <a href="{{ url_for('home') }}" class="btn btn-default">Testing home</a>
+  </p>
+</li>
+{% endblock %}
+
 {% block content %}
 <div class="home">
   <img src="{{ url_for('static', filename='img/splash.png') }}"
