--- a/static/style/style.css
+++ b/static/style/style.css
@@ -126,4 +126,9 @@ input[type=submit]{
       -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
       box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.75);
+
+}
+
+.about p {
+      font-size: 1.1em;
 }
