still working on create-info

--- a/templates/create.html
+++ b/templates/create.html
@@ -7,6 +7,7 @@
 {% block content %}
 <h1>Create an Info Card!</h1>
 
+
 Title: <input id="info-title" type="text" name="title" placeholder="Exploding Kittens...">
 <br>
 
@@ -16,7 +17,9 @@ Body:
 <br>
 
 Tag: <input id="tag-name" type="text" name="tag" placeholder="physics...">
+<br>
 
+<input type="submit" name="submit-button" value="Create!">
 {% endblock %}
 
 
