--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>Database Administration</h1>
-  <p>Welcome, {{ user }}.</p>
+  <p>Welcome, {{ user.name }}.</p>
   <h2>Tags</h2>
   <table id="tags">
     <tr><th></th><th>Name</th><th>ObjectId</th></tr>
