--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <li><a href="javascript:;" id="signin">Sign In</a></li>
 <li><a href="javascript:;" id="about">About</a></li>
 <li><a href="javascript:;" id="team">Team</a></li>
+<li><a href="javascript:;" id="dummy">Dummy Login! :D</a></li>
 {% endblock %}
 
 {% block content %}
