--- a/static/style/in.css
+++ b/static/style/in.css
@@ -44,12 +44,14 @@ html { height: 100%;}
 }
 
 #wrapper.toggled #sidebar-wrapper {
+    position: absolute;
+    margin-top:50px;
     width: 220px;
 }
 
 #page-content-wrapper {
     width: 100%;
-    padding-top: 70px;
+    padding-top: 100px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -293,4 +295,8 @@ html { height: 100%;}
     bottom: 0;
     background-color: rgba(250,250,250,.8);
     z-index: 1;
+}
+
+.navbar-fixed-top {
+    padding-top: 100px;
 }
