--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,8 @@
       <ul class="nav navbar-nav navbar-right">
       {% block navbar %}
         <li><a style="color:#ffffff;">Welcome, {{ user.name }}</a></li>
+        <li><a href="/profile">Profile</a></li>
         <li><a href="javascript:;" id="signout">Sign Out</a></li>
-        <li><a href="{#{ url_for('about') }#}" id="about">About</a></li>
-        <li><a href="{#{ # url_for('team') }#}" id="team">Team</a></li>
       {% endblock %}
       </ul>
     </div>
