--- a/static/style/in.css
+++ b/static/style/in.css
@@ -21,15 +21,14 @@ html { height: 100%;}
 }
 
 #wrapper.toggled {
-    padding-left: 220px;
 }
 
 #sidebar-wrapper {
     z-index: 1000;
-    left: 220px;
+    left: 300px;
     width: 0;
     height: 100%;
-    margin-left: -220px;
+    margin-left: -300px;
     overflow-y: auto;
     overflow-x: hidden;
     background: #1a1a1a;
@@ -41,7 +40,7 @@ html { height: 100%;}
 
 #sidebar-wrapper::-webkit-scrollbar {
   display: none;
-      position: absolute;
+    position: absolute;
     margin-top:50px;
 }
 
@@ -68,10 +67,11 @@ html { height: 100%;}
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 220px;
+    width: 300px;
     margin: 0;
     padding: 0;
     list-style: none;
+    font-size: 40px;
 }
 
 .sidebar-nav li {
