--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
       <ul class="nav navbar-nav navbar-right">
       {% block navbar %}
         <li><a style="color:#ffffff;">Welcome, {{ user.name }}</a></li>
+        <li class="active"><a href="#">Home</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="javascript:;" id="signout">Sign Out</a></li>
       {% endblock %}
