--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,13 @@
 
 {% block title %}Hedgehog{% endblock %}
 
+{% block navbar %}
+        <li><a style="color:#ffffff;">Welcome, {{ user.name }}</a></li>
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="/profile">Profile</a></li>
+        <li><a href="javascript:;" id="signout">Sign Out</a></li>
+{% endblock %}
+
 {% block content %}
 <br><br>
     <div id="wrapper">
