made sidebar part of base.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 <li><a href="javascript:;" id="dummy">Dummy Login! :D</a></li>
 {% endblock %}
 
+{% block sidebar %}{% endblock %}
+
 {% block content %}
 <div class="home">
   <img src="{{ url_for('static', filename='img/splash.png') }}"
