--- a/templates/base.html
+++ b/templates/base.html
@@ -31,28 +31,48 @@
     </div>
   </nav>
   {% block sidebar %}
-      <div id="wrapper">
+    <div id="wrapper">
         <div class="overlay"></div>
     
         <!-- Sidebar -->
         <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+
+            <ul class="nav sidebar-nav">
             <ul class="nav navbar-nav sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                       
+                    </a>
+                </li>
                 <li  class="active">
                     <a href="#">Home</a>
                 </li>
                 <li>
                     <a href="#">About</a>
                 </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">Team</a>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Classes<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
+                    <li class="dropdown-header">Join specific classes with other users to share study guides!</li>
+                    <li><a href="#">Zamansky Software Development</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Folders<span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown-header">Organize your study guides into folders!</li>
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
