--- a/static/style/style.css
+++ b/static/style/style.css
@@ -85,8 +85,8 @@ h1 {
 input[type=text],
 input[type=password]{
       background-color: white;
-      padding: 5px;
-      padding-left: 25px;
+      padding: 10px;
+      padding-left: 40px;
       width: 300px;
       color: black;
       -webkit-border-radius: 5px;
@@ -97,10 +97,14 @@ input[type=password]{
 
 .username {
       background: url("../img/icon/username.png") left center no-repeat;
+      background-position:5%;
+      
 }
 
 .password {
       background: url("../img/icon/password.png") left center no-repeat;
+      background-position:5%;
+      
 }
 
 input[type=submit]{
@@ -117,7 +121,7 @@ input[type=submit]{
       color: #E4F1FE;
       width: 700px;
       height: 550px;
-      padding: 20px;
+      padding: 50px;
       position: absolute;
       top: 50%;
       right: 50%;
@@ -133,7 +137,7 @@ input[type=submit]{
       color: #E4F1FE;
       width: 700px;
       height: 550px;
-      padding: 20px;
+      padding: 50px;
       position: absolute;
       top: 50%;
       right: 50%;
