--- a/templates/index.html
+++ b/templates/index.html
@@ -51,12 +51,10 @@
       <h1>Hedgehog</h1>
     </center>
     <p>
-      Have you ever ripped your hair out in frustration as you scanned through countless pages of notes and online databases?
-      Well, now you don't have to! I mean, you'll still have to go through your notes, but we'll go through the databases for you!
-    </p>
-    <p>
-      Hedgehog is a collaborative study guide maker that will sift through several online databases to find information that might be 
-      useful to know for your next exam. asdf Hedgeworth, the mastermind behind this nifty creation, (something something).
+    Welcome to Hedgehog! 
+    <br><br>
+    Hedgehog is an online tool that will help you compile a comprehensive study guide in just minutes. After signing up, you will have easy access to relevant sets of information from diverse, credible websites.
+    
     </p>
   </div>
   <div class="team" style="display:none;">
