added credits for icons (icons will be added later)

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,6 +42,10 @@
         <!-- /#page-content-wrapper -->
 
     </div>
+    <!-- THIS NEEDS TO BE INCLUDED IN THE FOOTER BECAUSE I GOT THE VECTOR ICONS FOR FREE -->
+    <!--
+    <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>Hedgehog is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+    -->
     <!-- /#wrapper -->
 {% endblock %}
 
