--- a/static/style/in.css
+++ b/static/style/in.css
@@ -299,3 +299,16 @@ html { height: 100%;}
 .borderless tbody tr td, .borderless tbody tr th, .borderless thead tr th {
     border: none;
 }
+
+.sidebar-nav > .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 300px;
+    color: gray;
+    display: none;
+}
+
+.sidebar-nav > .footer > a {
+    color:white;
+}
