--- a/templates/base.html
+++ b/templates/base.html
@@ -86,9 +86,10 @@
                 <li>
                     <a href="#">Contact</a>
                 </li>
-                <li>
-                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
-                </li>
+                <div class="footer">
+                  <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></p>
+                  <p>Hedgehog is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></p>
+                </div>
             </ul>
         </nav>
   {% endblock %}
