about and team page

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,24 +51,18 @@
       <h1>Hedgehog</h1>
     </center>
     <p>
-<<<<<<< HEAD
-      Have you ever ripped your hair out in frustration as you scanned through countless pages of notes and online databases?
-      Well, now you don't have to! I mean, you'll still have to go through your notes, but we'll go through the databases for you!
-    </p>
-    <p>
-      Hedgehog is a collaborative study guide maker that will sift through several online databases to find information that might be
-      useful to know for your next exam. asdf Hedgeworth, the mastermind behind this nifty creation, (something something).
-=======
     Welcome to Hedgehog! 
     <br><br>
-    Hedgehog is an online tool that will help you compile a comprehensive study guide in just minutes. After signing up, you will have easy access to relevant sets of information from diverse, credible websites.
+    Hedgehog is an online tool that will help you compile a comprehensive study guide in just minutes. After signing up, you will have easy access to sets of relevant information from diverse, credible websites.
+    <br><br>
     
->>>>>>> b52970b364242e273c8e7d2a230228d68481f058
     </p>
   </div>
   <div class="team" style="display:none;">
-    <h1>Meet the Team</h1>
-    <table>
+    <center><h1>Meet my team!</h1></center>
+    Creating Hedgehog was no easy task. I needed a team of dedicated coders, who shared the vision I had for Hedgehog, and they brought it to life. Here they are!
+    <br><br>
+    <table width="100%" style="text-align: center;">
       <!--
       <tr>
         <td>pic1</td>
@@ -78,16 +72,10 @@
       </tr>
       -->
       <tr>
-        <td>Leader</td>
-        <td>Backend Developer</td>
-        <td>UX Designer</td>
-        <td>Middleware Developer</td>
-      </tr>
-      <tr>
-        <td>Angela Chan</td>
-        <td>Leon Cheng</td>
-        <td>Amanda Chiu</td>
-        <td>Eric Stringham</td>
+        <td>Leader<br>Angela Chan</td>
+        <td>Backend Developer<br>Leon Cheng</td>
+        <td>UX Designer<br>Amanda Chiu</td>
+        <td>Middleware Developer<br>Eric Stringham</td>
       </tr>
     </table>
   </div>
