about and team page updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,11 @@
     <p>
     Welcome to Hedgehog! 
     <br><br>
-    Hedgehog is an online tool that will help you compile a comprehensive study guide in just minutes. After signing up, you will have easy access to sets of relevant information from diverse, credible websites.
+    Hedgehog is an online tool that will help you compile a comprehensive study guide in just minutes. After signing up, you will have easy access to multitudes of relevant information from diverse and credible websites.
     <br><br>
-    
+    Our goal is to make studying a little easier for you and every other student. My team and I have worked hard to bring you Hedgehog, and we hope you enjoy the experience.
+    <br><br>
+    ~Hedgeworth
     </p>
   </div>
   <div class="team" style="display:none;">
