formatting team, add amanda

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -153,7 +153,9 @@ input[type=submit]{
       font-size: 1.1em;
 }
 
-
+table, td {
+      padding-top: 20px;
+}
 .navbar {
       margin-bottom: 0;
 }
