--- a/templates/index.html
+++ b/templates/index.html
@@ -65,14 +65,17 @@
     Creating Hedgehog was no easy task. I needed a team of dedicated coders, who shared the vision I had for Hedgehog, and they brought it to life. Here they are!
     <br><br>
     <table width="100%" style="text-align: center;">
-      <!--
+      <tr>
+        <td colspan="4">Mastermind<br>Hedgeworth</td>
+      </tr>
       <tr>
         <td>pic1</td>
         <td>pic2</td>
-        <td>pic3</td>
+        <td><img src="{{ url_for('static', filename='img/team/achiu.png') }}"
+    id="amanda"
+    style="height:100px;"></td>
         <td>pic4</td>
       </tr>
-      -->
       <tr>
         <td>Leader<br>Angela Chan</td>
         <td>Backend Developer<br>Leon Cheng</td>
