--- a/templates/index.html
+++ b/templates/index.html
@@ -62,12 +62,13 @@
   </div>
   <div class="team" style="display:none;">
     <center><h1>Meet my team!</h1></center>
-    Creating Hedgehog was no easy task. I needed a team of dedicated coders, who shared the vision I had for Hedgehog, and they brought it to life. Here they are!
+    Creating Hedgehog was no easy task. I needed a team of dedicated coders, who shared the vision I had for Hedgehog, and their hard work brought it to life. Here they are!
     <br><br>
     <table width="100%" style="text-align: center;">
+      <!--
       <tr>
         <td colspan="4">Mastermind<br>Hedgeworth</td>
-      </tr>
+      </tr>-->
       <tr>
         <td>pic1</td>
         <td>pic2</td>
