--- a/templates/base.html
+++ b/templates/base.html
@@ -44,16 +44,16 @@
                        
                     </a>
                 </li>
-                <li  class="active">
+                <li class="active">
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Create a new study guide</a>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Something else here</a></li>
+                    <li class="dropdown-header">Here are study guides you made!</li>
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
