--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
       </tr>-->
       <tr>
         <td><img src="{{ url_for('static', filename='img/team/achan.png') }}"
-    id="amanda"
+    id="angela"
     style="height:100px;"></td>
         <td>pic2</td>
         <td><img src="{{ url_for('static', filename='img/team/achiu.png') }}"
