--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,11 @@
                         <div class="container">
                             <table class="table table-hover borderless">
                                 <tr>
-                                    <th>testing</th>
+                                    <th>
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}"
+                                        alt="Science">
+                                        <a href="#"><h2>Science</h2></a>
+                                    </th>
                                     <th>testing</th>
                                     <th>testing</th>
                                 </tr>
