--- a/templates/index.html
+++ b/templates/index.html
@@ -70,14 +70,26 @@
         <td colspan="4">Mastermind<br>Hedgeworth</td>
       </tr>-->
       <tr>
-        <td><img src="{{ url_for('static', filename='img/team/achan.png') }}"
-    id="angela"
-    style="height:100px;"></td>
-        <td>pic2</td>
-        <td><img src="{{ url_for('static', filename='img/team/achiu.png') }}"
-    id="amanda"
-    style="height:100px;"></td>
-        <td>pic4</td>
+        <td>
+          <img src="{{ url_for('static', filename='img/team/achan.png') }}"
+          id="angela"
+          style="height:100px;">
+        </td>
+        <td>
+          <img src="{{ url_for('static', filename='img/team/lcheng.png') }}"
+          id="leon"
+          style="height:100px;">
+        </td>
+        <td>
+          <img src="{{ url_for('static', filename='img/team/achiu.png') }}"
+          id="amanda"
+          style="height:100px;">
+        </td>
+        <td>
+          <img src="{{ url_for('static', filename='img/team/estringham.png') }}"
+          id="eric"
+          style="height:100px;">
+        </td>
       </tr>
       <tr>
         <td>Leader<br>Angela Chan</td>
