--- a/templates/base.html
+++ b/templates/base.html
@@ -87,8 +87,8 @@
                     <a href="#">Contact</a>
                 </li>
                 <div class="footer">
-                  <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></p>
-                  <p>Hedgehog is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></p>
+                  <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+                  Hedgehog is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></p>
                 </div>
             </ul>
         </nav>
