--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
   <div class="team" style="display:none;">
     <center><h1>Meet my team!</h1></center>
     Creating Hedgehog was no easy task. I needed a team of dedicated coders, who shared the vision I had for Hedgehog, and their hard work brought it to life. Here they are!
-    <br><br>
+    <br><br><br>
     <table width="100%" style="text-align: center;">
       <!--
       <tr>
@@ -73,11 +73,15 @@
         <td><img src="{{ url_for('static', filename='img/team/achan.png') }}"
     id="angela"
     style="height:100px;"></td>
-        <td>pic2</td>
+        <td><img src="{{ url_for('static', filename='img/team/lcheng.png') }}"
+    id="leon"
+    style="height:100px;"></td>
         <td><img src="{{ url_for('static', filename='img/team/achiu.png') }}"
     id="amanda"
     style="height:100px;"></td>
-        <td>pic4</td>
+    <td><img src="{{ url_for('static', filename='img/team/estringham.png') }}"
+    id="eric"
+    style="height:100px;"></td>
       </tr>
       <tr>
         <td>Leader<br>Angela Chan</td>
