--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Create a new study guide</a>
+                    <a href="/new">Create a new study guide</a>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
