--- a/templates/home.html
+++ b/templates/home.html
@@ -19,23 +19,25 @@
                         <div class="container">
                             <table class="table table-hover borderless">
                                 <tr>
-                                    <th>
+                                    <td>
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}"
+                                        alt="Science">
+                                        <a href="#">Science</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="{{ url_for('static', filename='img/atom18.png') }}"
+                                        alt="Science">
+                                        <a href="#">Science</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
                                         <img src="{{ url_for('static', filename='img/atom18.png') }}"
                                         alt="Science">
                                         <a href="#"><h2>Science</h2></a>
-                                    </th>
-                                    <th>testing</th>
-                                    <th>testing</th>
-                                </tr>
-                                <tr>
-                                    <th>testing</th>
-                                    <th>testing</th>
-                                    <th>testing</th>
-                                </tr>
-                                <tr>
-                                    <th>testing</th>
-                                    <th>testing</th>
-                                    <th>testing</th>
+                                    </td>
                                 </tr>
                             </table>
                         </div>
